--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,17 +1,15 @@
 [versions]
 agp = "8.10.1"
 atomicfu = "0.28.0"
-kotlin = "2.1.21"
-kotlinTest = "2.1.21"
+kotlin = "2.2.0"
 kotlinxIoCore = "0.7.0"
-kotlinStdlib = "2.1.21"
 ktor = "3.2.0"
 
 [libraries]
 atomicfu = { module = "org.jetbrains.kotlinx:atomicfu", version.ref = "atomicfu" }
-kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlinTest" }
+kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlinx-io-core = { module = "org.jetbrains.kotlinx:kotlinx-io-core", version.ref = "kotlinxIoCore" }
-kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib", version.ref = "kotlinStdlib" }
+kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib", version.ref = "kotlin" }
 ktor-network = { module = "io.ktor:ktor-network", version.ref = "ktor" }
 
 [plugins]
