--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,17 @@
 [versions]
 agp = "8.12.0"
-asen = "0.4.7"
+nott = "0.1.1"
 borr = "0.0.4"
+buri = "0.0.2"
 dagr = "0.3.4"
 kotlin = "2.2.0"
 runner = "1.7.0"
 
 [libraries]
-asen = { module = "io.github.remmerw:asen", version.ref = "asen" }
+nott = { module = "io.github.remmerw:nott", version.ref = "nott" }
 borr = { module = "io.github.remmerw:borr", version.ref = "borr" }
 dagr = { module = "io.github.remmerw:dagr", version.ref = "dagr" }
+buri = { module = "io.github.remmerw:buri", version.ref = "buri" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlinx-io-core = { module = "org.jetbrains.kotlinx:kotlinx-io-core", version = "0.8.0" }
 kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib", version.ref = "kotlin" }
