--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,20 +1,19 @@
 [versions]
-agp = "8.13.0"
-kotlin = "2.2.20"
+agp = "8.13.2"
+kotlin = "2.3.0"
 
 [libraries]
-nott = { module = "io.github.remmerw:nott", version = "0.1.6" }
-borr = { module = "io.github.remmerw:borr", version = "0.0.5" }
-dagr = { module = "io.github.remmerw:dagr", version = "0.4.0" }
-buri = { module = "io.github.remmerw:buri", version = "0.0.3" }
+nott = { module = "io.github.remmerw:nott", version = "0.1.7" }
+borr = { module = "io.github.remmerw:borr", version = "0.0.6" }
+dagr = { module = "io.github.remmerw:dagr", version = "0.4.1" }
+buri = { module = "io.github.remmerw:buri", version = "0.0.5" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
-kotlinx-io-core = { module = "org.jetbrains.kotlinx:kotlinx-io-core", version = "0.8.0" }
+kotlinx-io-core = { module = "org.jetbrains.kotlinx:kotlinx-io-core", version = "0.8.2" }
 kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib", version.ref = "kotlin" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version = "1.10.2" }
-runner = { module = "androidx.test:runner", version = "1.7.0" }
-uri-kmp = { module = "com.eygraber:uri-kmp", version = "0.0.20" }
+uri-kmp = { module = "com.eygraber:uri-kmp", version = "0.0.21" }
 
 [plugins]
-androidLibrary = { id = "com.android.library", version.ref = "agp" }
+androidLibrary = { id = "com.android.kotlin.multiplatform.library", version.ref = "agp" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
-vanniktech-mavenPublish = { id = "com.vanniktech.maven.publish", version = "0.34.0" }
+vanniktech-mavenPublish = { id = "com.vanniktech.maven.publish", version = "0.35.0" }
